# envisible

./: .bkey.cache  .gitignore  Cargo.toml  PERFORMANCE_REPORT.md  README.md  SECURITY_REPORT.md  TODO.md  build.ts  cli.ts  index.ts  install.sh  opencode.json  package.json
.github/workflows/: ci.yml  release.yml
bench/: Cargo.toml
bench/src/: main.rs
cli/: Cargo.toml
cli/src/: agent.rs  lib.rs  main.rs  passphrase.rs
cli/src/commands/: clear.rs  exec.rs  mod.rs  run.rs  setup.rs  sync.rs  ui.rs
cli/src/tui/: actions.rs  app.rs  component.rs  doc.rs  mod.rs  render.rs  router.rs  state.rs
cli/src/tui/components/: footer.rs  header.rs  members.rs  secrets.rs  tags.rs  textarea.rs
cli/src/tui/pages/: home.rs  invite.rs  mod.rs  secret_form.rs  tag_form.rs
cli/tests/: exec.rs
envi/: Cargo.toml
envi-storage/_envi/019cf1be-709e-7132-82f1-ed4489c1f478/: b9bfb387-fdd1-429c-833d-1a8e347c54f0.envi.enc
envi/cli/: Cargo.toml
envi/cli/src/: main.rs
envi/cli/src/commands/: mod.rs  run.rs  setup.rs  sync.rs  ui.rs
envi/cli/src/tui/: app.rs  mod.rs  render.rs
envi/envilib/: Cargo.toml
envi/envilib/src/: config.rs  crypto.rs  envi_file.rs  error.rs  lib.rs  projects.rs  secrets.rs  storage.rs  store.rs  types.rs
envilib/: Cargo.toml
envilib/src/: config.rs  crypto.rs  error.rs  keychain.rs  lib.rs  members.rs  storage.rs  store.rs  types.rs
envilib/tests/: crypto.rs  invite.rs  members.rs  projects.rs  secrets.rs  store.rs
envilib/tests/common/: mod.rs
lib/: Cargo.toml
lib/benches/: large_vault.rs  playground.rs  sync_pipeline.rs
lib/src/: config.rs  crypto.rs  envi_file.rs  error.rs  invite.rs  lib.rs  members.rs  namespaces.rs  secrets.rs  storage.rs  store.rs  types.rs  vault_document.rs  vault_repo.rs
lib/tests/: crypto.rs  invite.rs  members.rs  namespaces.rs  secrets.rs  store.rs
lib/tests/common/: mod.rs
proto/: .gitignore  SPECS.md  build.ts  cli.ts  package.json
proto/src/: bkey-file.ts  config.ts  crypto.ts  invite.ts  keychain.ts  projects.ts  secrets.ts  storage.ts  types.ts
proto/src/cli/: run.ts  setup.ts  ui.ts
proto/src/tui/: App.tsx  ProjectPane.tsx  ProjectSecretsView.tsx  SecretPane.tsx
src/: config.ts  keychain.ts  projects.ts  secrets.ts  storage.ts  store.ts  types.ts
src/cli/: grant-access.ts  init.ts  run.ts  ui.ts  unlock.ts
src/tui/: App.tsx  Form.tsx  MembersPane.tsx  ProjectSecretsView.tsx  SecretPane.tsx
tui-v2/: Cargo.toml
tui-v2/src/: actions.rs  component.rs  main.rs  router.rs  state.rs
tui-v2/src/components/: footer.rs  header.rs  members.rs  mod.rs  secrets.rs  tags.rs  textarea.rs
tui-v2/src/pages/: home.rs  invite.rs  mod.rs  new_secret.rs  secret_form.rs  tag_form.rs  test.rs
