[package]
name = "envi"
version.workspace = true
edition = "2021"

[lib]
name = "envi"
path = "src/lib.rs"

[[bin]]
name = "envi"
path = "src/main.rs"

[dependencies]
lib = { path = "../lib" }
tokio = { workspace = true, features = ["net", "sync"] }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
automerge = { workspace = true }
autosurgeon = { workspace = true }

rand = "0.8"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
dialoguer = "0.11"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v7"] }
base64 = { workspace = true }
arboard = "3"
console = "0.15"
indicatif = "0.17"
