[package]
name = "lib"
version.workspace = true
edition = "2021"

[dependencies]
automerge = { workspace = true }
autosurgeon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }

argon2 = "0.5"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
opendal = { version = "0.55", features = ["services-s3", "services-fs", "services-webdav", "services-github"] }
futures = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }
directories = "6"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "large_vault"
harness = false

[[bench]]
name = "sync_pipeline"
harness = false

[[bench]]
name = "playground"
harness = false
