[package]
name = "lib"
version.workspace = true
edition = "2021"

[dependencies]
automerge = { workspace = true }
autosurgeon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }

argon2 = "0.5"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
hmac = "0.13"
hkdf = "0.13"
sha2 = "0.11"
rand = "0.10"
opendal = { version = "0.57", features = ["services-s3", "services-fs", "services-webdav", "services-github"] }
futures = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }
directories = "6"

[dev-dependencies]
tempfile = "3"
