[package]
name = "envi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "envi"
path = "src/main.rs"

[dependencies]
envilib = { path = "../envilib" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
automerge = { workspace = true }
autosurgeon = { workspace = true }

clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
dialoguer = "0.11"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v7"] }
base64 = { workspace = true }
