[package]
name = "envilib"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge = { workspace = true }
autosurgeon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }

argon2 = "0.5"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
opendal = { version = "0.55", features = ["services-s3", "services-fs", "services-webdav"] }
uuid = { version = "1", features = ["v7", "serde"] }
directories = "6"
